Fix spacing and add point
not sure if this will work

--- a/css/main.css
+++ b/css/main.css
@@ -33,11 +33,11 @@ nav a {
   text-decoration: none;
 }
 
-nav a:hover{
+nav a:hover {
   color: #b42885;
   text-decoration: underline;
 }
 
-.inro{
-  font-size: 1rem;
+.inro {
+  font-size: .1rem;
 }
